improved UI, ZoomLens movement implemented, working on canvas zoom

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "robotjs": "^0.6.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -26,6 +28,7 @@
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
     "electron-build": "electron-builder",
+    "rebuild": "npm rebuild --runtime=electron --target=11.1.1 --disturl=https://atom.io/download/atom-shell --abi=85",
     "release": "yarn react-build && electron-builder --publish=always",
     "build": "yarn react-build && yarn electron-build",
     "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
