--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.1.10",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^1.2.0",
+    "jszip": "^3.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
